# PedalBoard2

./: .dockerignore  .gitattributes  .gitignore  CMakeLists.txt  Dockerfile  README.md
app/src/: AboutPage.cpp  AboutPage.h  App.cpp  App.h  ApplicationMappingsEditor.cpp  ApplicationMappingsEditor.h  AudioDeviceManagerSingleton.cpp  AudioDeviceManagerSingleton.h  AudioRecorderControl.cpp  AudioRecorderControl.h  AudioSingletons.cpp  BranchesLAF.cpp  BranchesLAF.h  BypassableInstance.cpp  BypassableInstance.h  ColourScheme.cpp  ColourScheme.h  ColourSchemeEditor.cpp  ColourSchemeEditor.h  FilePlayerControl.cpp  FilePlayerControl.h  FilterGraph.cpp  FilterGraph.h  InternalFilters.cpp  InternalFilters.h  JackClient.cpp  JuceHelperStuff.cpp  LADSPAPluginFormat.cpp  LogDisplay.cpp  LogDisplay.h  LogFile.cpp  LogFile.h  LooperControl.cpp  LooperControl.h  LooperEditor.cpp  LooperEditor.h  MainPanel.cpp  MainPanel.h  Mapping.cpp  MappingEntryMidi.cpp  (+39 more)
app/src/NiallsOSCLib/: OSCMessage.cpp
app/src/NiallsSocketLib/: UDPSocket.cpp
